--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/server.js"
+    "start": "nodemon ./src/server.js",
+    "test:video:service": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=/src/modules/videos/test/services/videoServices.test.js"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +24,9 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
-    "prettier": "^3.1.1"
+    "prettier": "^3.1.1",
+    "sinon": "^17.0.1"
   }
 }
