style: criado nova regra, onde permite o cacth do metodo manda somente o erro

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
       "import/extensions": "off",
       "consistent-return": "off",
       "no-console": "off",
-      "semi": ["error", "always"]
+      "semi": ["error", "always"],
+      "no-useless-catch": "off"
     }
 }
