--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon ./src/server.js",
     "test:video:service": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=/test/videos/services/videoServices.test.js",
     "test:category:service": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=/test/category/services/categoryServices.test.js",
+    "test:user:service": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=/test/user/services/userService.test.js",
     "test:video:validators": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=/test/videos/validators/validatorSchemaVideo.test.js",
     "test:category:validators": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=/test/category/validators/validatorSchemaCategory.test.js",
     "test:video:routes": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=/test/routes/videos.test",
@@ -19,8 +20,10 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.7.1",
     "supertest": "^6.3.3",
     "yup": "^1.3.3"
